# snakemake-executor-plugin-azure-batch

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  ci_mocked_api.yml  ci_true_api.yml  codespell.yml  release-please.yml
docs/: further.md  intro.md
snakemake_executor_plugin_azure_batch/: __init__.py  build.py  common.py  constant.py  executor.py  util.py
tests/: __init__.py  tests.py  tests_mocked_api.py
