[tool.poetry]
name = "snakemake-executor-plugin-azure-batch"
version = "0.1.0"
description = "A Snakemake executor plugin for submitting jobs to Microsoft Azure Batch."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "1.14.4"
snakemake-interface-executor-plugins = "8.1.0"
azure-storage-blob = "^12.17.0"
azure-batch = "^14.0.0"
azure-mgmt-batch = "^17.1.0"
azure-identity = "^1.14.0"
msrest = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}
snakemake-storage-plugin-s3 = "0.2.7"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
