[tool.poetry]
name = "snakemake-executor-plugin-azure-batch"
version = "0.1.3"
description = "A Snakemake executor plugin for submitting jobs to Microsoft Azure Batch."
authors = [
  "Jake van Campen <jake.vancampen7@gmail.com>",
  "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-azure-batch"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/azure-batch.html"
keywords = ["snakemake", "plugin", "executor", "azure-batch"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.15.0"
snakemake-interface-executor-plugins = "^8.1.1"
azure-storage-blob = "^12.17.0"
azure-batch = "^14.0.0"
azure-mgmt-batch = "^17.0.0"
azure-identity = "^1.14.0"
msrest = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = ">=7.4.2,<9.0.0"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}
snakemake-storage-plugin-s3 = "0.2.8"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
