[tool.poetry]
name = "snakemake-executor-plugin-azure-batch"
version = "0.2.1"
description = "A Snakemake executor plugin for submitting jobs to Microsoft Azure Batch."
authors = [
  "Jake VanCampen <jake.vancampen7@gmail.com>",
  "Johannes Koester <johannes.koester@uni-due.de>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-azure-batch"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/azure-batch.html"
keywords = ["snakemake", "plugin", "executor", "azure-batch"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.17.2"
snakemake-interface-executor-plugins = "^9.2.0"
azure-storage-blob = "^12.20.0"
azure-batch = "^14.2.0"
azure-mgmt-batch = "^17.0.0"
azure-identity = "^1.17.1"
msrest = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.1.0"
coverage = "^7.6.0"
pytest = "^8.2.2"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}
snakemake-storage-plugin-s3 = "0.2.11"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
